Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108897

QFATAL : tst_physicsscene::UnknownTestFunc() ASSERT

    XMLWordPrintable

Details

    • d310aa6d8a (qt/qtquick3dphysics/dev) d0e60cc7fc (qt/qtquick3dphysics/6.4), f3e14cd23 (dev), 4b1ba9ad8 (6.5), 940acf5bf (6.4)

    Description

      QFATAL : tst_physicsscene::UnknownTestFunc() ASSERT failure in QAbstractCollisionNode: "Called object is not of the correct type (class destructor may have already run)", file /home/qt/work/install/include/QtCore/qobjectdefs_impl.h, line 119 
       agent:2022/11/26 03:36:40 build.go:399: 2: FAIL! : tst_physicsscene::UnknownTestFunc() Received a fatal error.

      Build log: https://testresults.qt.io/logs/qt/qtquick3dphysics/622090055b9a58c02cc200940718241f31376748/LinuxopenSUSE_15_4x86_64LinuxopenSUSE_15_4x86_64GCCqtci-linux-openSUSE-15.4-x86_64-50-46b112Sccache_UseConfigure_WarningsAreErrors/d8ac0bcd163c0d50e3c17f3d572689aa7b097cc7/test_1680122541/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtquick3dphysics/tasks/1680122536

      Tested changes (refs/builds/qtci/dev/1669433726):
        https://codereview.qt-project.org/c/qt/qtquick3dphysics/+/445491/2 Update dependencies on 'dev' in qt/qtquick3dphysics

      Attachments

        For Gerrit Dashboard: QTBUG-108897
        # Subject Branch Project Status CR V

        Activity

          People

            qt.team.graphics.and.multimedia Qt Graphics Team
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: