CollisionNode: delete rebuildConnection on the destructor

Fixes: QTBUG-108897
Pick-to: 6.4
Change-Id: I360f2d98a54b9529bb065421468fae91d008e7d0
Reviewed-by: Jonas Karlsson <jonas.karlsson@qt.io>